tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/empty-implicit-table.stderr
TOML parse error at line 1, column 9
  |
1 | [naughty..naughty]
  |         ^
invalid table header
expected `.`, `]`
